--- a/index.html
+++ b/index.html
@@ -39,3 +39,5 @@
         <img src="product3.jpg" alt="Product 3">
         <h3>Product 3</h3>
         <p>39,999 Rs</p>
+        <button>Add to Cart</button>
+      </div>
